--- a/src/main/resources/templates/factura-form.html
+++ b/src/main/resources/templates/factura-form.html
@@ -53,11 +53,19 @@
             </div>
         </div>
 
-        <h4>Productos de la Orden de Compra</h4>
+        <div class="d-flex justify-content-between align-items-center mb-2">
+            <h4 class="mb-0">Productos de la Orden de Compra</h4>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="selectAllItems" checked>
+                <label class="form-check-label" for="selectAllItems">
+                    Seleccionar todos
+                </label>
+            </div>
+        </div>
         <table class="table table-hover border" id="ordenCompraItemsTable">
             <thead class="table-light">
                 <tr>
-                    <th><input type="checkbox" id="selectAllItems" checked/></th>
+                    <th>Seleccionar</th>
                     <th>Código</th>
                     <th>Nombre</th>
                     <th>Marca</th>
@@ -181,6 +189,14 @@
 
         // Event listener for IVA percentage change
         inputIvaPorcentaje.addEventListener('input', updateItemIvaAndTotals);
+        
+        // Event listener for "Select All" checkbox
+        document.getElementById('selectAllItems').addEventListener('change', function(e) {
+            const checkboxes = document.querySelectorAll('input[name="itemIds"]');
+            checkboxes.forEach(checkbox => {
+                checkbox.checked = e.target.checked;
+            });
+        });
     });
 </script>
 </body>
