Feature: Seccion de Ventas para decrementar stock + Fix stock en 0 al editar
Nueva funcionalidad de Ventas:
- Listado de productos con boton Vender y stock actual visible
- Modal para registrar venta con validacion de stock disponible
- Decremento automatico de stock al registrar venta
- Historial de ventas con fecha, producto, cantidad y total
- Trigger automatico: crea SC cuando stock baja del punto de reposicion
- Enlace en navbar: Abastecimiento > Ventas
- Vista simple sin clientes (solo para decrementar stock)

Fix critico:
- Al editar producto (punto reposicion, precio, etc) el stock se ponia en 0
- Ahora preserva el stockActual del producto existente al editar
- Stock solo cambia con ventas o ingresos, no al editar otros campos

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -32,6 +32,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownAbastecimiento">
                         <li><a class="dropdown-item" th:href="@{/proveedores}">Proveedores</a></li>
                         <li><a class="dropdown-item" th:href="@{/productos}">Productos</a></li>
+                        <li><a class="dropdown-item" th:href="@{/ventas}">🛒 Ventas</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" th:href="@{/solicitudes-compra}">Solicitud De Compra</a></li>
                         <li><a class="dropdown-item" th:href="@{/presupuestos/pedidos}">Presupuesto</a></li>
