--- a/src/main/resources/templates/solicitud-compra-listado.html
+++ b/src/main/resources/templates/solicitud-compra-listado.html
@@ -3,6 +3,16 @@
 <head>
     <title>Listado de Solicitudes de Compras</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .obs-text {
+            max-width: 300px !important;
+            display: block !important;
+        }
+        .observaciones-cell.expanded .obs-text {
+            max-width: 100% !important;
+            word-wrap: break-word !important;
+        }
+    </style>
 </head>
 <body>
 <div th:replace="~{fragments/navbar :: navbarFragment}"></div>
